修改头像，修改MVVM

--- a/_posts/2018-02-07-iOS-关于MVVM.md
+++ b/_posts/2018-02-07-iOS-关于MVVM.md
@@ -7,7 +7,7 @@ tags: 博客
 
 # iOS关于MVVM
 ## MVVM基本概念
-![1874977-9bab0f07280d0134](media/15175494259108/1874977-9bab0f07280d0134.png)
+<img src="/images/posts/mvvm/15175494259108/1874977-9bab0f07280d0134.png" height="200" width="600"> 
 ### Model
 和MVC中的model一样，可以针对model封装一些额外的逻辑。注意：可以封装与model切身相关的，其他与model非相关的避免出现。
 
@@ -18,48 +18,20 @@ tags: 博客
 viewModel是从MVC的controller中抽取出来的展示逻辑，负责从model中获取view所需的数据，转换成view可以展示的数据。
 view从必要的资源（数据库，网络请求，本地缓存等）获取原始数据，根据视图的展示逻辑，处理成view（controller）的展示数据。
 viewModel存在的目的在于抽离controller中展示业务的逻辑，而不是替代controller，所以viewModel中不应该出现任何view对象，更不应该存在控制器跳转逻辑。
-![1874977-64a31221bb6b8b6e](media/15175494259108/1874977-64a31221bb6b8b6e.gif)
+<img src="/images/posts/mvvm/15175494259108/1874977-64a31221bb6b8b6e.gif" height="200" width="600"> 
 从上图可知，controller夹在view和viewModel之间做的其中一个主要事情就是将view和viewModel进行绑定。在逻辑上，controller知道应该展示哪个View，Controller也知道应该使用哪个viewModel来提供数据，而view和viewModel之间是互相是不知道的，所以Controller仅关注viewModel的数据配置和管理各种各样的视图。切记，并非是ViewModel去控制什么时候展示View。
 
-## MVC、MVP、MVVM 区别和联系
-### MVC
-比较直观的框架模式，分为 View(视图层，用户看到的所有画面)、Controller(业务逻辑操作)、Model(数据的对象)。
-![](media/15175494259108/15177947594740.jpg)
-![](media/15175494259108/15177947661566.jpg)
-
-### MVP(MVC演化版)
-MVP是把增加了Presenter , Controller和Presenter共同负责逻辑的处理，View和Model层没有太大变化，两层之间不进行通讯。
-![](media/15175494259108/15177948472418.jpg)
-![](media/15175494259108/15177948528113.jpg)
-
-MVP目的就是为了完全切断View和Model之间的联系，由Persenter充当桥梁,做到View-Model之间通讯的隔离。
-
-### MVP的优势
-* Model与View完全分离，修改互不影响
-* 更高效地使用，因为所有的逻辑交互都发生在一个地方 -- Presenter内部
-* 一个Presenter可用于多个View，而不需要改变Presenter的逻辑（因为View的变化总是比Model的变化频繁）。
-* 更便于测试。把逻辑放在Presenter中，就可以脱离用户接口来测试逻辑（单元测试）
-
-### MVVM(MVP演化版)
-MVVM增加了ViewModel层, Controller的大量逻辑都放在了ViewModel去处理，View和Model层处理的问题没有太大变化。
-![](media/15175494259108/15177948759210.jpg)
-![](media/15175494259108/15177948824971.jpg)
-
-MVVM是将“数据模型数据双向绑定”的思想作为核心，因此在View和Model之间没有联系，通过ViewModel进行交互，而且Model和ViewModel之间的交互是双向的，因此数据的变化会同时修改数据源，而数据源数据的变化也会立即反应到View上。
-
-
-
-### MVVM优点
-#### 低耦合
+## MVVM优点
+### 低耦合
 视图可以独立与Model变化和修改，一个ViewModel可以绑定到不通的“View”上，当View变化的时候，Model可以不变，当Model变化的时候View也可以不变。
 
-#### 可重用性
+### 可重用性
 可以把一些视图逻辑放在一个ViewModel里面，让很多view重用这段视图逻辑。
 
-#### 独立开发
+### 独立开发
 开发人员可以专注于业务逻辑和数据的开发，设计人员可以专注于页面的设计。
 
-#### 可测试
+### 可测试
 界面经常是难于测试的，在MVVM中可以针对ViewModel来测试。
 
 
