--- a/_posts/2018-02-11-CocoPods发布.md
+++ b/_posts/2018-02-11-CocoPods发布.md
@@ -1,4 +1,10 @@
-# CocoPods发布
+---
+layout: post
+title: "CocoPods发布"
+date: 2018-02-08 
+description: "CocoPods发布"
+tag: iOS
+---  
 
 ## 注册CocoPods
 
