--- a/_posts/2018-02-11-CocoPods发布.md
+++ b/_posts/2018-02-11-CocoPods发布.md
@@ -82,10 +82,17 @@ tag: iOS
 发布时会验证 Pod 的有效性，如果你在手动验证 Pod 时使用了 --use-libraries 或 --allow-warnings 等修饰符，那么发布的时候也应该使用相同的字段修饰，否则出现相同的报错。
 
 	pod trunk push ZRCheckVersion.podspec
-	
+
+出现下图表示发布成功了
+<img src="/images/posts/cocopods/trunksuccess.png" height="200" width="600"> 
 	
 ## 验证 
 执行一下命令，如果出现结果，则表示发布成功
 	
 	pod search ZRCheckVersion
+	
+有时候输入上面命令，搜不到的话，尝试以下方法：
+
+	1、删除~/Library/Caches/CocoaPods目录下的search_index.json文件
+	2、pod setup
 
